# T89-group-project

./: README.md
driver/: CMakeLists.txt
driver/barcode/: CMakeLists.txt  barcode.c
driver/irline/: CMakeLists.txt  barcode.c  irline.c
driver/magnetometer/: CMakeLists.txt  magnetometer.c
driver/motor_control/: CMakeLists.txt  motor_control.c
driver/tcp_client/: client.c
driver/ultrasonic/: CMakeLists.txt  ultrasonic.c
driver/wheel_encoder/: CMakeLists.txt  encoder.c
driver/wifi_server/: CMakeLists.txt  wifi_server.c
implementation/: CMakeLists.txt  client.c  infrared.h  lwipopts.h  lwipopts_examples_common.h  magnetometer.h  magnometer.h  main.c  motor.h  ultrasonic_sensor.h  wifi.h
